Remove the surefire config that is redundant after the plugin update.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>